--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.datasource.url=dcrhg4kh56j13bnu.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:gn3x3jxe3j4efy2m
-spring.datasource.username=ar2clqj7c7uv2bvu
-spring.datasource.password=vk0ayvihcrdnl9u1
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
+#spring.datasource.url=dcrhg4kh56j13bnu.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:gn3x3jxe3j4efy2m
+#spring.datasource.username=ar2clqj7c7uv2bvu
+#spring.datasource.password=vk0ayvihcrdnl9u1
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#server.port=8080
-#server.error.include-message=always
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+server.port=8080
+server.error.include-message=always
